2003-05-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkinput.c: Add constants of GdkExtensionMode. 
	Add Gdk::Input.set_extension_events. 
	* src/rbgtkwidget.c: Remove Gtk::Requisiton. Use [width, height] instead.
	ditto for Gtk::Widget#size_request, #child_requisition.
	Add Gtk::Widget#get_size_request.
	Rename Gtk::Widget#activate? to #activate, #ancestor to #get_ancestor.
	Bugfix for bad parameter numbers of Gtk::Widget#intersect.
	Return true not self for Gtk::Widget#hide_on_delete.
	* src/rbgtkrequisition: Removed.
	* src/rbgtkallocation.c, src/rbgtk.h, src/rbgtkwidget.c: 
	Improve Gtk::Allocation.
	* src/rbgtkimcontext.c: Fix a warning. 

2003-05-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkimcontext.c: Add Gtk::IMContext. 
	* src/rbgtkimcontextsimple.c: Add Gtk::IMContextSimple.
	* src/rbgtkimmulticontext.c: Add Gtk::IMMulticontext. 
	* src/rbgtktreemodelsort.c: Add Gtk::TreeModelSort.

2003-05-04  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/*/*.rb: Fix follow changes below.

2003-05-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktable.c: Rename Gtk::Table#set_row_spacing, #row_spacing=, #row_spacing,
	#set_column_spacing, #column_spacing=, #column_spacing #default_col_spacing to 
	Gtk::Table#set_row_spacings, #row_spacings=, #row_spacings, #set_column_spacings, 
	#column_spacings=, #column_spacings, default_column_spacing
	Add Gtk::Tabel#set_row_spacing(row), #set_column_spacing(col).
	* src/rbgtkprogressbar.c: Remove methods for deprecated properties.
	* src/rbgtkcontainer.c: Add Gtk::Container.child_property, .child_properties, 
	Gtk::Container#child_type, Gtk::Container#child_get_property, 
	Gtk::Container#child_set_property.
	* src/rbgtkcontainer.c, rbgtk.h: Add rbgtkcontainer_register_child_property_setter/getter.
	
2003-04-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkobject.c: Remove Gtk::Object#user_data, #user_data=, #set_user_data. 

2003-04-24  Masao Mutoh  <mutoh@highway.ne.jp>
