@@ -1,3 +1,8 @@
+2003-05-10  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbgtkwidget.c: Rename Gtk::Widget#mnemonic_activate? -> #mnemonic_activate, 
+	Gtk::Widget#child_focus? -> #child_focus
+	
 2003-05-09  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/rbgdkinput.c: Add constants of GdkExtensionMode. 
